# WorkflowX-Configurator

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  xflows_manager.py
afj_awesome_flex_json_v2/: __init__.py
afj_awesome_flex_json_v2/visual_builder/: __init__.py  api.py  node.py  presets.json
anything_swap_bridge/: __init__.py
anything_swap_bridge/src/: __init__.py  crop.py  stitch.py
anything_swap_bridge/utils/: __init__.py  bboxes.py  colormatch.py  geometry.py  masking.py  prompting.py  resize.py  sam3.py
docs/: ANYTHING_SWAP_BRIDGE.md  IMAGE_COMPARE_EDIT_X_EDITOR.md  KIE_ATLAS_API_NODES.md  NANOBANANA_FULL_API.md  NODE_REFERENCE.md  UNIFIED_AUTOPROMPTER_X.md
docs/afj-awesome-flex-json/: Readme.txt  (+2 more)
load_image_x/: __init__.py  runtime.py
nanobanana_full_api/: __init__.py  node.py
remote_image_api/: __init__.py  catalogs.py  model_contracts.json  nodes.py  runtime.py  validate_contract_drift.py
tests/: load_image_x_frontend_test.mjs  lorax_search_test.mjs  test_anything_swap_bridge.py  test_load_image_x.py  test_nanobanana_full_api.py  test_nodes.py  test_packaging.py  test_remote_image_api.py  test_unified_autoprompter.py  workflowx_group_helpers_test.mjs
unified_autoprompter/: __init__.py  folder_registry.py  gemini_backend.py  llama_binary.py  local_llama_backend.py  model_prompt_profiles.defaults.json  model_prompt_profiles.json  model_prompt_profiles.json.bak  node.py  ollama_backend.py  openai_backend.py  profile_config.py  profiles.py  prompt_builder.py  prompt_io.py  routes.py
workflow example/: FluxKlein9b-WofkflowX.json
(+18 files in other folders)
