[project]
name = "workflowx-configurator"
version = "2.0.0"
description = "WorkflowX bundles ComfyUI configuration profile nodes with XFlows workflow management, XPrompts prompt libraries, XNodes reusable node snippets, and the AFJ JSON prompt system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/haroonaslam/WorkflowX-Configurator"
Documentation = "https://github.com/haroonaslam/WorkflowX-Configurator#readme"
"Bug Tracker" = "https://github.com/haroonaslam/WorkflowX-Configurator/issues"

[tool.comfy]
PublisherId = "haxzero"
DisplayName = "WorkflowX Configurator"
Banner = "https://raw.githubusercontent.com/haroonaslam/WorkflowX-Configurator/main/docs/images/workflowx-banner-v4.png"
